[gd_scene load_steps=6 format=2]

[ext_resource path="res://compositions/colision_box/scenes/hurt_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://compositions/colision_box/scenes/hit_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://tests/scripts/test_colisions.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="CircleShape2D" id=2]
radius = 14.0357

[node name="colisions" type="Node2D"]
script = ExtResource( 3 )

[node name="hurt_box" parent="." instance=ExtResource( 1 )]
position = Vector2( 218, 168 )
id = 23
_hurtValue = 20.0
_hurtLimit = -20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
shape = SubResource( 1 )

[node name="hit_box" parent="." instance=ExtResource( 2 )]
position = Vector2( 539, 169 )
colliders = [ 90, 100, 23, 0 ]
_hitValue = 10.0
_timerToHit = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
modulate = Color( 0.94902, 0.0823529, 0.0392157, 1 )
shape = SubResource( 2 )

[connection signal="hurtEvent" from="hurt_box" to="." method="_on_hurt_box_hurtEvent"]
[connection signal="hitEvent" from="hit_box" to="." method="_on_hit_box_hitEvent"]
